Fixed paths and homepage

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "luna",
-  "homepage": "https://jagxxi.github.io/urjja/",
+  "homepage": "https://jagxxi.github.io/urjja",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
